# Indie-Studio

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  linux_build.sh  windows_build.bat
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
assets/character/: character.gltf  character.mtl
assets/powerUp/Heart/: heart.mtl
assets/powerUp/chilli/: chilli.glb
assets/powerUp/shield/: shield.glb
assets/weapons/50Cal/: 50Cal.mtl
include/: Map.hpp  Map3D.hpp  encapsulation.hpp
include/Encapsulation/: Camera.hpp  Gamepad.hpp  Model.hpp  MyRayMath.hpp  Sound.hpp  Text.hpp  Texture.hpp  Window.hpp  include.hpp
include/GameInterface/: Button.hpp  InputButton.hpp
include/GameObject/: Ai.hpp  BlockObject.hpp  EntityObjects.hpp  EnvironnementBlocs.hpp  GameObject.hpp  IGameObject.hpp  Item.hpp  Player.hpp  PowerUp.hpp  Weapon.hpp
include/GamePhase/: End.hpp  Game.hpp  GamePhase.hpp  GamePlay.hpp  Lobby.hpp  Menu.hpp  Pause.hpp  Play.hpp  Setting.hpp
include/Server/: Client.hpp  Message.hpp  Server.hpp
src/: Map.cpp  Map3D.cpp  main.cpp
src/Encapsulation/: Camera.cpp  Gamepad.cpp  Model.cpp  Sound.cpp  Text.cpp  Window.cpp
src/GameInterface/: Button.cpp  InputButton.cpp
src/GameObject/: Ai.cpp  EntityObjects.cpp  GameObject.cpp  Item.cpp  Player.cpp  Weapon.cpp
src/GamePhase/: End.cpp  Game.cpp  GamePlay.cpp  GamePlayAlive.cpp  GamePlaySpec.cpp  Lobby.cpp  Menu.cpp  Pause.cpp  Play.cpp  Setting.cpp
src/Server/: Client.cpp  Server.cpp
(+14 files in other folders)
